# stt-assistant

./: .gitignore  README.md
docs/: openapi.json  redoc.html  schema.dbml
stt_assistant_api/: README.md  config.py  eda.ipynb  main.py  pyproject.toml
stt_assistant_api/api/: router.py
stt_assistant_api/api/routes/: record.py  transcription.py  user.py
stt_assistant_api/core/: auth.py  db_session.py
stt_assistant_api/crud/: record.py  transcription.py  user.py
stt_assistant_api/models/: record.py  transcription.py  user.py
stt_assistant_api/schemas/: auth.py  record.py  transcription.py  user.py
stt_assistant_api/services/: speech_service.py  storage_service.py
stt_assistant_api/tests/: conftest.py  test_api_record.py  test_api_transcription.py  test_api_user.py
stt_assistant_api/tests/data/: data.py
stt_assistant_api/utils/: constants.py  functions.py
stt_assistant_client/: README.md  index.html  package-lock.json  package.json  vite.config.js
stt_assistant_client/src/: App.jsx  index.css  main.jsx
stt_assistant_client/src/components/audio/: AudioUpload.css  AudioUpload.jsx
stt_assistant_client/src/components/element/: LoadingSpinner.css  LoadingSpinner.jsx
stt_assistant_client/src/components/transcription/: TranscriptionBox.css  (+1 more)
stt_assistant_client/src/constants/: apiEndpoints.js  routes.js
stt_assistant_client/src/hooks/: authHelper.js
stt_assistant_client/src/pages/: HistoryPage.css  HistoryPage.jsx  HomePage.css  HomePage.jsx  ProtectedRoute.jsx
stt_assistant_client/src/utils/: authHelper.js  axiosHelper.js  codes.js
(+4 files in other folders)
